--- a/01-corrida.html
+++ b/01-corrida.html
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse" id="menuPrincipal">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="00-principal.html" class="nav-link">Home</a>
+                <a href="index.php" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
                 <a href="01-corrida.html" class="nav-link active">Corrida</a>
